--- a/Tab Manager/manifest.json
+++ b/Tab Manager/manifest.json
@@ -1,12 +1,18 @@
 {
-  	"name": "Tab Manager",
-  	"version": "3.13",
-  	"manifest_version": 2,
-  	"description": "Let's you very easy and fast handle your tabs!",
-	"icons":{"128":"icon.png","48":"icon48.png"},
-  	"permissions": ["tabs"],
-  	"browser_action":{
-  		"default_icon":"browser_action.png",
-  		"default_popup":"popup.html"
-  	}
+    "name": "Tab Manager",
+    "version": "3.14",
+    "manifest_version": 2,
+    "description": "Lets you very easily and quickly handle your tabs!",
+    "icons": {
+        "128": "icon.png",
+        "48": "icon48.png"
+    },
+    "permissions": ["tabs"],
+    "background": {
+        "page": "background.html"
+    },
+    "browser_action": {
+        "default_icon": "browser_action.png",
+        "default_popup": "popup.html"
+    }
 }
