--- a/Tab Manager/manifest.json
+++ b/Tab Manager/manifest.json
@@ -4,15 +4,15 @@
     "manifest_version": 2,
     "description": "Lets you very easily and quickly handle your tabs!",
     "icons": {
-        "128": "icon.png",
-        "48": "icon48.png"
+        "128": "images/icon.png",
+        "48": "images/icon48.png"
     },
     "permissions": ["tabs"],
     "background": {
         "page": "background.html"
     },
     "browser_action": {
-        "default_icon": "browser_action.png",
+        "default_icon": "images/browser_action.png",
         "default_popup": "popup.html"
     }
 }
